--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <img class="obj-center" src="assets/img/boutique-produits.png" alt="illustration paysants">
                     </figure>
                     <div>
-                        <h3>Nos BOXs à composer</h3>
+                        <h3>Nos BOXs <br> à composer</h3>
                         <p>à partir de 35,90€</p>
                         <a href="/pages/en-construction.html" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon <br> panier</a>
                     </div>
@@ -129,7 +129,7 @@
                     <div>
                         <h3>Nos confitures <br> & Miels</h3>
                         <p>à partir de 5€</p>
-                        <a href="/pages/en-construction.html" class="btn-grad"> <i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
+                        <a href="/pages/en-construction.html" class="btn-grad"> <i class="fas fa-shopping-basket"></i>Remplir mon <br> panier</a>
                     </div>
                 </article>
             </a>
@@ -139,9 +139,9 @@
                         <img src="assets/img/presentation-vins.png" alt="illustration paysants">
                     </figure>
                     <div>
-                        <h3>Notre cave à vin </h3>
+                        <h3>Notre cave <br> à vin </h3>
                         <p>à partir de 12€</p>
-                        <a href="/pages/en-construction.html" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
+                        <a href="/pages/en-construction.html" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon <br> panier</a>
                     </div>
                 </article>
             </a>
@@ -151,9 +151,9 @@
                         <img src="assets/img/huile-olive.png" alt="illustration paysants">
                     </figure>
                     <div>
-                        <h3>Nos huiles d'olive</h3>
+                        <h3>Nos huiles <br> d'olive</h3>
                         <p>à partir de 18€</p>
-                        <a href="/pages/en-construction.html" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
+                        <a href="/pages/en-construction.html" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon <br> panier</a>
                     </div>
                 </article>
             </a>
