fix display video

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a href="https://www.facebook.com/La-Cabane-%C3%A0-Fruits-103441918416877"><i class="fab fa-facebook"></i></a>
                     <a href="/pages/en-construction.html"> <i class="fas fa-store"></i></a> 
                 </div>
-                <img src="assets/img/nectars-paille.png" alt="">
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-NeDyRGy29U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
         <section id="engagements">
             <h2><i class="fas fa-check-circle"></i>Nos engagements</i></h2>
@@ -160,9 +160,9 @@
         </section>
         <section id="producteurs">
             <h2><i class="fas fa-map-marker-alt"></i>Nos producteurs français </h2>
-            <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
-            <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
-            <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
+            <div class="huile-bg"><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
+            <div class="nectars-bg"><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
+            <div class="vins-bg"><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
             <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
             <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
             <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
