--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div id="top-info">
-            <p>ici la promotion ou annonce frais de port</p>
+            <p>Produit de producteurs français ! <br> Frais de port offert à partir de 60€</p>
         </div>
         <a href="#"><img src="assets/img/logo-la-cabane-a-fruits-minimal.png" alt="Le logo de la cabane à fruits"></a>
         <nav>
