--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <a href="https://www.facebook.com/La-Cabane-%C3%A0-Fruits-103441918416877"><i class="fab fa-facebook"></i></a>
                     <a href="/pages/en-construction.html"> <i class="fas fa-store"></i></a> 
                 </div>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-NeDyRGy29U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <img src="assets/img/paille-produits.png" alt="">
             </section>
         <section id="engagements">
             <h2><i class="fas fa-check-circle"></i>Nos engagements</i></h2>
