--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
         <h1>Retrouvez le vrai goût des fruits </h1>
         <section>
-
+                <h2>test</h2>
         </section>
         <section>
 
